# Task_Flow

./: .env  pyproject.toml  taskflow.db  test.db
app/: main.py
app/api/: deps.py
app/api/v1/: auth_routes.py  user_routes.py
app/core/: config.py  security.py
app/crud/: crud_user.py
app/db/: init_db.py  session.py
app/models/: user.py
app/schemas/: user.py
app/tests/: conftest.py  test_auth.py  test_user.py
